added other pic

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Welcome To</h1>
     <h1>Siamur Rahman World.</h1>
     <H3>Its Learning Time</H3>
-    <p>You might face so much problem.When you pass this learning time.Sometimes you will be disappointed.You can fail again and again.But don't worry the method of learning is not easy task.When you will face a problem.You should try again,you should patience.Patiences is the main theme at those time.You might have to do work with a flow.If you dont finish on time.</p>
+    <p>You might face so much problem.When you pass this learning time.Sometimes you will be disappointed.You can fail again and again.But don't worry the method of learning is not easy task.When you will face a problem.You should try again,you should patience.Patiences is the main theme for this time.You might have to do work with a flow.If you dont finish on time.You will loser.And you know well that how the people treat with a loser.  </p>
     <p>Lets go your work now.No compromise,zero tolerence,dadicate your time.You can do anything.Nothing is important,if you dont be a  loser.so lets try try and try.</p>
 
     
