--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY FIRST FILE</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Otomanopee+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="file.css">
 
 
@@ -15,10 +15,11 @@
 <body>
     <h1>Welcome To</h1>
     <h1>Siamur Rahman World.</h1>
-    <H3>It's Learning Time.</H3>
-    <p>You might face so much problem.When you pass this learning time.Sometimes you will be disappointed.You can fail again and again.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.You might have to do work with a flow.If you dont finish on time.You may lose,and you know well that how the people treat with a loser.  </p>
-    <p>Lets go your work now.No Compromise,Zero Tolerence,Dadicate your time.You can do anything.Nothing is important,if you dont want to be a  loser.so lets try try and try.If you want more similar blog then click the button tab.</p>
-<img src="image  vv  bbbme.jpg" alt="">
+    <H3>Learning Time.</H3>
+    <p>You might face so much problem.When you want learn anything new.Sometimes you can demotivated for some reasons.Your family members need your financial help,your girlfriend want you may go to work either she will got marrid.Your neighbour can goship with  your bad condition.You can fail again and again.It will be disappointed you.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.You might have to do work with a flow.If you dont finish your work on time.You may lose,and you know well that how the people treat with a loser.  </p>
+    <p>Lets go, start your work now.Be motivated,No Compromise,Zero Tolerence.Dadicate your time,only for you.You can do anything.Nothing is impossible .Nothing is important,if you dont want to be a  loser.so lets try try and try.</p>
+    <p>If you want more similar blog then click the button tab</p>
+    <img src="image  vv  bbbme.jpg" alt="">
     
 </body>
 </html>
