--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>    
 <body>
     <h1>Welcome To</h1>
-    <h1>Siamur Rahman World.</h1>
+    <h1><span class="color">Siamur Rahman</span> World.</h1>
     <H3>Learning Time.</H3>
     <p>You might face so much problem.When you want learn anything new.Sometimes you can demotivated for some reasons.Your PC can't work or your keyboard can be destroyed,your net connection will go out. Your family members need your financial help,your girlfriend could want that you may go to work either she will got marrid with other person.Your neighbour can goship with  your bad condition.You can fail again and again.It will be disappointed you.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.</p>
     <p>When you already started focus on learing.You might have to do work with a flow.If you dont finish your work on time.Otherwise you may lose,and you know very well that how the people treat with a loser.</p>
