--- a/index.html
+++ b/index.html
@@ -13,14 +13,20 @@
 
 </head>    
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="color">Siamur Rahman</span> World.</h1>
-    <H3>Learning Time.</H3>
-    <p>You might face so much problem.When you want learn anything new.Sometimes you can demotivated for some reasons.Your PC can't work or your keyboard can be destroyed,your net connection will go out. Your family members need your financial help,your girlfriend could want that you may go to work either she will got marrid with other person.Your neighbour can goship with  your bad condition.You can fail again and again.It will be disappointed you.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.</p>
-    <p>When you already started focus on learing.You might have to do work with a flow.If you dont finish your work on time.Otherwise you may lose,and you know very well that how the people treat with a loser.</p>
-    <p>Lets go, start your work now.Be motivated,No Compromise,Zero Tolerence.Dadicate your time,only for you.You can do anything.Nothing is impossible .Nothing is important,if you dont want to be a  loser.so lets try try and try.</p>
-    <p>If you want more similar blog then click the button tab</p>
-    <img src="image  vv  bbbme.jpg" alt="">
+    <section>
+        <div class="half-width">
+            <h1>Welcome To</h1>
+        <h1><span class="color">Siamur Rahman</span> World.</h1>
+        <H3>Learning Time.</H3>
+        <p>You might face so much problem.When you want learn anything new.Sometimes you can demotivated for some reasons.Your PC can't work or your keyboard can be destroyed,your net connection will go out. Your family members need your financial help,your girlfriend could want that you may go to work either she will got marrid with other person.Your neighbour can goship with  your bad condition.You can fail again and again.It will be disappointed you.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.</p>
+        <p>When you already started focus on learing.You might have to do work with a flow.If you dont finish your work on time.Otherwise you may lose,and you know very well that how the people treat with a loser.</p>
+        <p>Lets go, start your work now.Be motivated,No Compromise,Zero Tolerence.Dadicate your time,only for you.You can do anything.Nothing is impossible .Nothing is important,if you dont want to be a  loser.so lets try try and try.</p>
+        <p>If you want more similar blog then click the button tab</p>
+        </div>
+        <div class="half-width">
+            <img src="image  vv  bbbme.jpg" alt="">
+        </div>
+    </section>
     
 </body>
 </html>
