--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>    
 <body>
-    <section>
+    <section class="top-baner">
         <div class="half-width">
             <h1>Welcome To</h1>
         <h1><span class="color">Siamur Rahman</span> World.</h1>
