--- a/index.html
+++ b/index.html
@@ -21,12 +21,20 @@
         <p>You might face so much problem.When you went to learn anything new.Sometimes you can demotivated for some reasons.Your PC can't work or your keyboard can be destroyed,your net connection will go out. Your family members need your financial help,your girlfriend can want that you may go to work either she will got marrid with other person.Your neighbour can goship with  your bad condition.You can fail again and again.It will be disappointed you.But don't worry the method of learning is not easy task.When you will face a problem.You need trying your best,you should patience.Patiences is the main theme for this time.</p>
         <p>When you already started focus on learing.You might have to do work with a flow.If you dont finish your work on time.Otherwise you may lose,and you know very well that how the people treat with a loser.</p>
         <p>Lets go, start your work now.Be motivated,No Compromise,Zero Tolerence.Dadicate your time,only for you.You can do anything.Nothing is impossible .Nothing is important,if you dont want to be a  loser.so lets try try and try.</p>
-        <p>If you want to see more similar blog.Or want to hire me then click the button tab.</p>
+        <p>If you want more,then click the button tab.</p>
         <a class="link-button" target="blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fsiamur-rahman-b937441b3%3Ffbclid%3DIwAR0BqH0Hq9QRf6o7xxv5YRHs8Ia_yZ_rAr1lWV0BoHfQU6FVUYlPteHXZCk&h=AT0hQggRZJXbuMBLZqQC5YE3p6d8u_wjhA8dHa1fWK-mM2gAbpyeqnFfU5vOau2a1YqxVt5QyS8GosieGAi0wurpPXHhrWEz-7H-OyVY5Cyc8BNqHcK0b8N5h-H0kAUitYSGwQ">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="siamuurg copy.jpg" alt="">
         </div>
+    </section>
+    <section class="dream">
+        <div class="hal-width">
+            <img src="Copy of eee.jpg">
+        </div>
+        <div class="half-width"><h1>My Dream</h1>
+            <h2>Become a web Developer.</h2>
+            <p>I am already learned the basic HTML and CSS.I can build any simple website. My goal is to build </p></div>
     </section>
     
 </body>
