--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <div class="half-width"><h1>My Dream</h1>
             <h2>Become a web Developer.</h2>
-            <p>I am already learned the basic HTML and CSS.I can build any simple website. My goal is to build </p></div>
+            <p>I am already learned the basic HTML and CSS.I can build any simple website.I can even teach my grandma how to make simple website.My goal is to build  3 websites and learn advenced topic</p></div>
     </section>
     
 </body>
