--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>    
 <body>
-    <section class="top-baner flexible-container" >
+    <section class="top-banner flexible-container" >
         <div class="half-width">
             <h1>Welcome To</h1>
         <h1><span class="color">Siamur Rahman</span> World.</h1>
@@ -28,8 +28,8 @@
             <img src="siamuurg copy.jpg" alt="">
         </div>
     </section>
-    <section class="top-baner flexible-container">
-        <div class="hal-width">
+    <section class="dream flexible-container">
+        <div class="half-width">
             <img src="Copy of eee.jpg">
         </div>
         <div class="half-width"><h1>My Dream</h1>
@@ -37,8 +37,9 @@
             <p>I am already learned the basic HTML and CSS.I can build any simple website.I can even teach my grandma how to make simple website.My goal is to build  3 websites and learn advenced topic</p>
             <a class="link-button" target="blank" href="https://l.facebook.com/l.php?u=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fsiamur-rahman-b937441b3%3Ffbclid%3DIwAR0BqH0Hq9QRf6o7xxv5YRHs8Ia_yZ_rAr1lWV0BoHfQU6FVUYlPteHXZCk&h=AT0hQggRZJXbuMBLZqQC5YE3p6d8u_wjhA8dHa1fWK-mM2gAbpyeqnFfU5vOau2a1YqxVt5QyS8GosieGAi0wurpPXHhrWEz-7H-OyVY5Cyc8BNqHcK0b8N5h-H0kAUitYSGwQ">see hare</a></div>
     </section>
-    <section class="top-baner">
-        <div><h1>Experiences</h1>
+    <section class="experience area" >
+        <h1>Experiences</h1>
+        <div class="flexible-container">
             <div> 
                 <h1>Full Stack Developer</h1>
                 <h3>2022-present.pro level devoloper</h3>
@@ -46,10 +47,10 @@
                 <p>Iam the master of HTML,CSS and Javascript.I know everything needed to make a website function,effeicent.I didn't stop with the web.I  went beyond with most popular Javascript framework called Vue JS.
                 I even know the development ,server and security.I will give you 100% web solution.</p>
             </div> 
-    
             <div>
                 <h1>Baby Web Developer</h1>
                 <h3>2022-2024 Herolearner</h3>
+                <p>They didn't offer me a job.But </p>
             </div>
         </div>
     </section>
